chore: rename project

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "cenek",
-    "short_name": "cenek",
+    "name": "Acenek",
+    "short_name": "Acenek",
     "start_url": "/",
     "display": "standalone",
     "orientation": "portrait-primary",
